--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,13 @@
 Package: TCAddins
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Provides user-written addins
 Version: 0.1.0
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
-Description: More about what it does (maybe more than one line)
-License: What license is it under?
+Authors@R: person("Tirthankar", "Chakravarty", email = "tirthankar.lists@gmail.com", role = c("aut", "cre"))
+Description: Provides user-written addins
+License: MIT
+Imports:
+  miniUI,
+  shiny,
+  addinexamples,
+  rstudioapi
 LazyData: TRUE
